# operator-ci-poc

./: .gitignore  AGENTS.md  README.md  opcli_mock  pyproject.toml  test_command_expansion.sh
.github/: copilot-instructions.md
.github/workflows/: build-artifacts.yml  ci.yml  integration-test.yml  test-build-artifacts.yml  test-integration.yml
docs/: ISD277-redesign.md  divergences.md
examples/: .spread-reuse.193461.yaml  .spread-reuse.236292.yaml  artifacts-generated.yaml  artifacts.yaml  concierge.yaml  spread.yaml  tox.ini
examples/.spread-run-fkh0vfir/: spread.yaml
examples/.spread-run-p72eeohu/: spread.yaml
examples/k8s-charm/: charmcraft.yaml  pyproject.toml
examples/k8s-charm/src/: charm.py
examples/k8s-rock/: rockcraft.yaml
examples/machine-charm/: charmcraft.yaml  pyproject.toml
examples/machine-charm/src/: charm.py
examples/tests/integration/: conftest.py  test_k8s_charm.py  test_machine_charm.py
src/opcli/: __init__.py  __main__.py  app.py
src/opcli/commands/: artifacts.py  provision.py  pytest_cmd.py  spread.py  tutorial_cmd.py
src/opcli/core/: artifacts.py  discovery.py  exceptions.py  provision.py  pytest_args.py  spread.py  subprocess.py  tutorial.py  yaml_io.py
src/opcli/data/: registry.yaml
src/opcli/models/: artifacts.py  artifacts_generated.py
tests/: conftest.py
tests/integration/: test_spread_lxd.py
tests/unit/: conftest.py  test_artifacts.py  test_discovery.py  test_models.py  test_provision.py  test_pytest_args.py  test_scaffold.py  test_spread.py  test_subprocess.py  test_tutorial.py
(+1 files in other folders)
